fixed card deck on mobile

--- a/src/input.css
+++ b/src/input.css
@@ -535,6 +535,11 @@ img{
     height: 100%;
   }
 
+  .meet{
+    display: block;
+  }
+
+
   .mores{
     display: block;
     transform: scale(1.2) translateY(-80px) translateX(30%);
@@ -623,7 +628,7 @@ img{
   .card-container{
     display: block;
     position: relative;
-    left: -18vw;
+    left: 10vw;
   }
 
   .card{
@@ -633,8 +638,8 @@ img{
 
   .card-container h1{
     position: relative;
-    bottom: 50px;
-    left: 18vw;
+    bottom: -30px;
+    left: -10vw;
     text-align: center;
     font-size: 2rem;
     font-weight: bold;
